--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project(socket_c_client C)
 
+set(CMAKE_C_FLAGS "-std=c99")
+
+
 set(CMAKE_GENERATOR "Unix Makefiles")
 
 set(SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/client.c)
